--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello GangRyung</title>
 </head>
 <body>
-<h1>Hello GangRyung!!</h1>
+<h1>Hello GangRyung with github!!</h1>
 </body>
 </html>
